# doris-python

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  release-notes.md
.github/workflows/: create-draft-release.yml  latest-changes.yml  prepare-release.yml  publish.yml
scripts/: prepare_release.py
src/doris_python/: __init__.py
src/doris_python/sqlalchemy/: __init__.py  aiomysql.py  asyncmy.py  datatype.py  dialect.py  mysqldb.py
src/pydoris/: __init__.py
src/pydoris/sqlalchemy/: dialect.py  pymysql.py
tests/: conftest.py  test_conn.py  test_conn_async.py  test_datatype.py  test_ddl_compiler.py  test_dialect_registry.py  test_package.py  test_type_compiler.py
